SubscribeTest.test_html

--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -1,1 +1,20 @@
-Form aqui...
+<h1>Formulário de Inscrição</h1>
+<form action="." novalidade method="post">
+	<p>
+		<label for="id_name">Nome:</label>
+		<input id="id_name" type="text" name="name" maxlength="100"/>
+	</p>
+	<p>
+		<label for="id_cpf">CPF:</label>
+		<input id="id_cpf" type="text" name="cpf" maxlength="11"/>
+	</p>
+	<p>
+		<label for="id_email">Email:</label>
+		<input id="id_email" type="email" name="email" maxlength="75"/>
+	</p>
+	<p>
+		<label for="id_phone">Telefone:</label>
+		<input id="id_phone" type="text" name="phone" maxlength="20"/>
+	</p>
+	<input type="submit" value="Enviar!"/>
+</form>
