--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -1,25 +1,82 @@
-<h1>Formulário de Inscrição</h1>
-<form action="." novalidade method="post">
-	{% csrf_token %}
-	<p>
-		<label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
-		{{ form.name.erros }}
-		{{ form.name }}
-	</p>
-	<p>
-		<label for="{{ form.cpf.id_for_label }}">{{ form.cpf.label }}</label>
-		{{ form.cpf.erros }}
-		{{ form.cpf }}
-	</p>
-	<p>
-		<label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
-		{{ form.email.erros }}
-		{{ form.email }}
-	</p>
-	<p>
-		<label for="{{ form.phone.id_for_label }}">{{ form.phone.label }}</label>
-		{{ form.phone.erros }}
-		{{ form.phone }}
-	</p>
-	<input type="submit" value="Enviar!"/>
-</form>
+{% load static %}
+<!DOCTYPE html>
+<html>
+	<head>
+        <title>Eventex - O maior encontro hacker do mundo!</title>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="Eventex - O maior encontro hacker do mundo!">
+        <meta name="author" content="wttd">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/basalstyle/style.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+        <link href='http://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>
+
+	</head>
+
+	<body>
+        <div class="header-frame row">
+            <header class="header header-inline min-h-3 row desktop-12 container" role="banner">
+
+                <div class="site-logo">
+                    <h1><a href="/" rel="home">Eventex</h1>
+                    <p class="site-description screen-reader-only">O maior encontro hacker do mundo!</p>
+                </div>
+
+                <nav class="nav-inline" role="navigation">
+                    <a href="javascript:void(0);" class="nav-mobile"><i class="fa fa-bars"></i></a>
+                    <ul>
+                        <li><a data-scroll href="/#overview">Conferência</a></li>
+                        <li><a data-scroll href="/#sponsors">Patrocinadores</a></li>
+                        <li><a data-scroll href="/#register">Inscrição</a></li>
+                        <li><a data-scroll href="/#venue">Local</a></li>
+                    </ul>
+                </nav>
+
+            </header>
+        </div>
+
+
+        <!-- OVERVIEW -->
+        <section>
+        	<div class="content row padding-bottom-3 desktop-12 container">
+                <h1>Formulário de Inscrição</h1>
+                <div class="desktop-6">
+                    <form action="." novalidate method="post">
+                        {% csrf_token %}
+                        <div class="form-row label-block input-text">
+                            <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+                            {{ form.name.errors }}
+                            {{ form.name }}
+                        </div>
+                        <div class="form-row label-block input-text">
+                            <label for="{{ form.cpf.id_for_label }}">{{ form.cpf.label }}</label>
+                            {{ form.cpf.errors }}
+                            {{ form.cpf }}
+                        </div>
+                        <div class="form-row label-block input-text">
+                            <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+                            {{ form.email.errors }}
+                            {{ form.email }}
+                        </div>
+                        <div class="form-row label-block input-text">
+                            <label for="{{ form.phone.id_for_label }}">{{ form.phone.label }}</label>
+                            {{ form.phone.errors }}
+                            {{ form.phone }}
+                        </div>
+                        <p class="btn-row"><input type="submit" value="Enviar!"/></p>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+    </body>
+</html>
