SubscribeSuccessMessage.test_message

--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -50,6 +50,13 @@
         	<div class="content row padding-bottom-3 desktop-12 container">
                 <h1>Formulário de Inscrição</h1>
                 <div class="desktop-6">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div>
+                                <p>{{ message }}</p>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                     <form action="." novalidate method="post">
                         {% csrf_token %}
                         <div class="form-row label-block input-text">
