Move custom css to main.css

--- a/eventex/core/static/css/main.css
+++ b/eventex/core/static/css/main.css
@@ -350,3 +350,17 @@ section header h2 {
 
 
 /* Fim Customização */
+.alert {
+    padding: 0 15px;
+    margin-bottom: : 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+.alert p {
+    padding: 7px 0 7px;
+}
+.alert.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d0e9c6;
+}
