Refactor core removing hardcoded urls

--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -111,7 +111,7 @@
                 	<h2>Inscrição</h2>
                 	<h3>Inscrições abertas!</h3>
                     <p>Fique à vontade para entrar em contato com a gente.<br>Teremos prazer em responder quaisquer dúvidas.</p>
-                	<a class="btn-basic btn-blue" href="/inscricao/">Inscreva-se já!</a>
+                	<a class="btn-basic btn-blue" href="{% url 'subscriptions:new' %}">Inscreva-se já!</a>
                 </div>
             </div>
         </section>
