TemplateRegressionTest form.non_field_errors

--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -8,6 +8,7 @@
                 <div class="desktop-6">
                     <form action="." novalidate method="post">
                         {% csrf_token %}
+                        {{ form.non_field_errors }}
                         <div class="form-row label-block input-text">
                             <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
                             {{ form.name.errors }}
