index.html with keynote speakers

--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -73,6 +73,16 @@
             </div>
         </section>
 
+        <section id="speakers">
+            <div>
+                <h2>Palestrantes Convidados</h2>
+                <img src="http://hbn.link/hopper-pic"/>
+                <h4>Grace Hopper</h4>
+
+                <img src="http://hbn.link/turing-pic"/>
+                <h4>Alan Turing</h4>
+        </section>
+
         <!-- SPONSORS -->
         <section id="sponsors">
         	<div class="sponsors text-align-center row desktop-12 min-h-28 padding-bottom-2 container">
