--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -74,13 +74,16 @@
         </section>
 
         <section id="speakers">
-            <div>
+            <div class="speakers text-align-center row desktop-8 padding-bottom-2 container">
                 <h2>Palestrantes Convidados</h2>
-                <img src="http://hbn.link/hopper-pic"/>
-                <h4>Grace Hopper</h4>
-
-                <img src="http://hbn.link/turing-pic"/>
-                <h4>Alan Turing</h4>
+                <div class="desktop-4">
+                    <img src="http://hbn.link/hopper-pic"/>
+                    <h4>Grace Hopper</h4>
+                </div>
+                <div class="desktop-4">
+                    <img src="http://hbn.link/turing-pic"/>
+                    <h4>Alan Turing</h4>
+                </div>
         </section>
 
         <!-- SPONSORS -->
