--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -62,7 +62,11 @@
                 {% for speaker in speakers %}
                 <div class="desktop-4">
                     <img src="{{ speaker.photo }}"/>
-                    <h4>{{ speaker.name }}</h4>
+                    <h4>
+                        <a href="{{ speaker.get_absolute_url }}">
+                            {{ speaker.name }}
+                        </a>
+                    </h4>
                 </div>
                 {% endfor %}
         </section>
